@@ -98,7 +98,7 @@ gint display_infos_dbox()
 	result = gtk_dialog_run(GTK_DIALOG(dbox));
 	switch (result) {
 	case GTK_RESPONSE_OK:
-		ti68k_engine_unhalt();
+		ti68k_engine_start();
 		break;
 	default:
 		break;
